2005-10-11  Stephane Voltz <stefdev@modulonet.fr>

	* backend/umax_pp.c: change sane_start semantic to allow for batch
	  scanning

2005-10-08  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/mustek_a3p1.desc: Downgraded status to
	  minimal.
	* doc/descriptions/mustek_usb2.desc: Added "new" marker.

2005-10-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added HP ScanJet 3800c.
	* frontend/scanimage.c: Use correct size for fgets. Patch from
	  Antoine Jacoutot <ajacoutot@lphp.org>. 

2005-10-05  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* backend/microtek2.c: Off-by-one error

2005-10-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS acinclude.m4 configure configure.in backend/Makefile.in
	  backend/dll.conf backend/mustek_usb2.c backend/mustek_usb2.h
	  backend/mustek_usb2_asic.c backend/mustek_usb2_asic.h
	  backend/mustek_usb2_high.c backend/mustek_usb2_high.h
	  backend/mustek_usb2_reflective.c backend/mustek_usb2_transparent.c
	  doc/Makefile.in doc/sane-mustek_usb2.man
	  doc/mustek_usb2/mustek_usb2.CHANGES
	  doc/mustek_usb2/mustek_usb2.TODO: 
	  Added mustek_usb backend which supports the Mustek BearPaw 2448
	  TA Pro. Changes of the code before inclusion to CVS can be found
	  in doc/mustek_usb2/mustek_usb2.CHANGES.
	* doc/sane.man: Added mustek_usb2. Added description for u12
	  backend. Added missing links to other backends.
	* doc/descriptions/mustek_usb2.desc: Moved from
	  descriptions-external. Updated.
	* PROJECTS: Removed link to BeOS (link goes to nowhere, SANE
	  website has links to projects). Removed link to wi32 port
  	  (included in SANE). Removed link to SaneTwain (listed on SANE
	  website).
	* doc/doxygen-sanei.conf.in: Updated to current doxygen
	  version. Output more C-friendly format.
	* include/sane/sanei.h include/sane/sanei_backend.h
	  include/sane/sanei_debug.h include/sane/sanei_pp.h